Exclude named anchors from a:not([href])

--- a/revenge.css
+++ b/revenge.css
@@ -158,7 +158,7 @@ button.disabled:not([disabled])::after,
 ----------------------------------------------------------------------
 */
 
-a:not([href])::after {
+a:not([href]):not([name])::after {
    content: 'Do you mean for this to be a link or a <button>? It does not link to anything!' !important;
 }
 
